<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.isoplane.dataape</groupId>
  <artifactId>da-server</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>da-server</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <java.version>17</java.version>

    <commons-beanutils.version>1.9.4</commons-beanutils.version>
    <commons-collections4.version>4.4</commons-collections4.version>
    <commons-configuration2.version>2.7</commons-configuration2.version>
    <gson.version>2.8.9</gson.version>
    <jackson-databind.version>2.13.1</jackson-databind.version>
    <javalin.version>4.3.0</javalin.version>
    <logback.version>1.2.6</logback.version>
    <mongo-java-driver.version>3.12.10</mongo-java-driver.version>

    <!-- test -->
    <junit-jupiter-engine.version>5.8.2</junit-jupiter-engine.version> <!-- 5.8.1 -->

    <!-- plugins -->
    <jib-maven-plugin.version>3.1.4</jib-maven-plugin.version>
    <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>${commons-beanutils.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${commons-collections4.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-configuration2</artifactId>
      <version>${commons-configuration2.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongo-java-driver</artifactId>
      <version>${mongo-java-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin</artifactId>
      <version>${javalin.version}</version>
      <!-- <exclusions>
        <exclusion>
          <groupId>org.jetbrains.kotlin</groupId>
          <artifactId>kotlin-stdlib-jdk7</artifactId>
        </exclusion>
      </exclusions> -->
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-engine.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven-assembly-plugin.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
							<archive>
								<manifest>
									<mainClass>com.isoplane.dataape.DataApeServer</mainClass>
								</manifest>
							</archive> 
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <configuration>
          <allowInsecureRegistries>true</allowInsecureRegistries>
          <from>
            <image>openjdk:18-alpine</image>
          </from>
          <to>
            <!-- <image>localhost:2375/${project.artifactId}</image> -->
            <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
            <!-- <tags>
                <tag>${git.commit.id}</tag>
              </tags> -->
          </to>
          <extraDirectories>
						<paths>
							<path>
								<from>../da-frontend/dist/data-ape</from>
								<into>/web-root</into>
							</path>
						</paths>
					</extraDirectories>
          <outputPaths>
            <tar>target/${project.artifactId}.docker.tar</tar>
          </outputPaths>
          <container>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
            <jvmFlags>
              <jvmFlag>-server</jvmFlag>
              <jvmFlag>-DdataapePath=/docker-data/data-ape</jvmFlag>
              <jvmFlag>-Dlogback.configurationFile=/docker-data/data-ape/config/da-logback.xml</jvmFlag>
            </jvmFlags>
            <mainClass>com.isoplane.dataape.DataApeServer</mainClass>
            <args>
              <arg>/docker-data/data-ape/config/NOCHECKIN_da.properties,/docker-data/data-ape/config/da.properties</arg>
            </args>
            <ports>
              <port>4100</port>
            </ports>
          </container>
        </configuration>
        <executions>
          <execution>
            <id>build-and-push-docker-image</id>
            <phase>package</phase>
            <goals>
              <goal>buildTar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>


  </build>

</project>